--- a/Sixieme/S07-Multiplications-Divisions/Ex-3a-S07-Divisons.tex
+++ b/Sixieme/S07-Multiplications-Divisions/Ex-3a-S07-Divisons.tex
@@ -12,9 +12,10 @@
 
 \begin{document}
 
+\begin{multicols}{2}
 \begin{exercice}[1]
 \begin{multicols}{2}
-\begin{enumerate}[label=""]
+\begin{enumerate}[label=]
 \item $2 \times 0 = \ldots$
 \item $2 \times 1 = \ldots$
 \item $2 \times 2 = \ldots$
@@ -31,14 +32,37 @@
 
 \columnbreak
 
-765
+\mydivision{9~765}{2}{1.5}
 \end{multicols}
 \end{exercice}
 
+\begin{exercice}[1]
+\begin{multicols}{2}
+\begin{enumerate}[label=]
+\item $3 \times 0 = \ldots$
+\item $3 \times 1 = \ldots$
+\item $3 \times 2 = \ldots$
+\item $3 \times 3 = \ldots$
+\item $3 \times 4 = \ldots$
+\item $3 \times 5 = \ldots$
+\item $3 \times 6 = \ldots$
+\item $3 \times 7 = \ldots$
+\item $3 \times 8 = \ldots$
+\item $3 \times 9 = \ldots$
+\item $3 \times 10 = \ldots$
+\item $3 \times 11 = \ldots$
+\end{enumerate}
+
+\columnbreak
+
+\mydivision{8~174}{3}{1.5}
+\end{multicols}
+\end{exercice}
+\end{multicols}
 \end{document}
 
 % Local Variables:
 % gptel-model: deepseek-chat
 % gptel--backend-name: "DeepSeek"
-% gptel--bounds: ((405 . 687))
+% gptel--bounds: ((424 . 706) (737 . 765) (919 . 1201) (1232 . 1260))
 % End:
