--- a/Premiere/S05-Suites/Ex-5a-S05-Problèmes.tex
+++ b/Premiere/S05-Suites/Ex-5a-S05-Problèmes.tex
@@ -69,4 +69,33 @@ On pose $u_0 = 1000$ la 1re proposition de Pierre et $u_1 = 500$ la
 \item Vers quel prix Pierre et Paul vont-il tomber d’accord ?
 \end{enumerate}
 \end{exercice}
+
+\newpage
+
+\begin{exercice}[6][Évolution de la population française]
+On souhaite modéliser l'évolution de la population française sur 10
+ans à l'aide d'une suite arithmético-géométrique.
+
+Les données suivantes sont issues de l'INSEE :
+\begin{itemize}
+\item Population de la France au 1er janvier 2025 : $68{,}606$
+millions d'habitants.
+\item Nombre de naissances en 2024 : $663~000$, en baisse de $2{,}2\%$
+par rapport à 2023.
+\item Nombre de décès en 2024 : $667~000$, en hausse de $1{,}2\%$ par
+rapport à 2023.
+\item Solde migratoire estimé en 2024 : $+100~000$ personnes.
+\end{itemize}
+
+\begin{enumerate}
+\item Calculer le solde naturel de la population en 2024 et en déduire
+le taux d'accroissement naturel $t$.
+\item Exprimer la population $P_{n+1}$ en fonction de $P_n$ sous la
+forme d'une suite arithmético-géométrique.
+\item Déterminer la nature de la suite et proposer une méthode pour
+obtenir son expression explicite.
+\item Calculer la population estimée en 2035 ($P_{10}$) en supposant
+que les tendances actuelles restent constantes.
+\end{enumerate}
+\end{exercice}
 \end{document}
