--- a/Premiere/S06-Produit-Scalaire/Ex-2a-S06-Produit-Scalaire-Simple.tex
+++ b/Premiere/S06-Produit-Scalaire/Ex-2a-S06-Produit-Scalaire-Simple.tex
@@ -49,6 +49,66 @@ $\vec{IJ}$, $\vec{IK}$ et $\vec{IK}$
 \end{enumerate}
 \end{exercice}
 
+\newpage
+
+
+\begin{exercice}[1][Produit scalaire dans le plan]
+Soit un rectangle $ABCD$ tel que \ldots\ (préciser les conditions sur les côtés) et soit un point $M$ tel que \ldots. 
+\begin{enumerate}
+  \item Calculer $\vec{AB}\cdot\vec{AD}$.
+  \item En déduire \ldots.
+  \item Calculer \ldots.
+  \item Calculer \ldots.
+  \item En déduire la mesure de l'angle $\theta$.
+\end{enumerate}
+% Correction Exercice 1
+\end{exercice}
+
+\begin{exercice}[2]
+Dans un repère orthonormé, on considère les points $A$, $B$ et $C$. 
+\begin{enumerate}
+  \item Déterminer une équation cartésienne de la droite $(AB)$, puis les coordonnées d’un vecteur normal à cette droite.
+  \item Déterminer une équation cartésienne de la droite perpendiculaire à $(AB)$ passant par le point $C$.
+  \item Quelles sont les coordonnées du point symétrique de $C$ par rapport à la droite $(AB)$ ?
+\end{enumerate}
+% Correction Exercice 2
+\end{exercice}
+
+\begin{exercice}[3]
+On considère un triangle isocèle $ABC$ en $A$ tel que $AB=AC$. On définit :
+\begin{itemize}
+  \item $I$ le milieu du segment $[BC]$,
+  \item $H$ le projeté orthogonal de $A$ sur la droite $(BC)$,
+  \item $J$ le milieu du segment $[AH]$.
+\end{itemize}
+En choisissant un repère orthonormé adapté, démontrer que les droites $(IJ)$ et $(AC)$ sont perpendiculaires.
+% Correction Exercice 3
+\end{exercice}
+
+\begin{exercice}[4]
+Dans un repère orthonormé, on considère les points $A$ et $B$.
+\begin{enumerate}
+  \item Déterminer une équation cartésienne de la droite $(AB)$ ainsi que celle de la médiatrice du segment $[AB]$.
+  \item Soit $M$ un point de la droite $(AB)$ tel que \ldots\ (préciser la condition géométrique). Déterminer une mesure de l’angle $\theta$ formé par \ldots.
+  \item[a)] Quelles sont les coordonnées du point $N$ de la droite $(AB)$ tel que le triangle $(A,B,N)$ soit rectangle direct (les points $A$, $B$, $N$ se lisent dans cet ordre dans le sens trigonométrique) ?
+  \item[b)] Déterminer alors une mesure de l’angle $\theta'$.
+  \item Quelles sont les coordonnées du point $P$ de la droite $(AB)$ tel que le triangle $(A,B,P)$ soit équilatéral direct ?
+\end{enumerate}
+% Correction Exercice 4
+\end{exercice}
+
+\begin{exercice}[5]
+On considère un segment $[AB]$ mesurant \ldots\ cm et le cercle de centre $A$ et de rayon \ldots\ cm.
+\begin{enumerate}
+  \item On définit $M$ comme le point d’intersection de \ldots\ et $N$ comme un point du cercle tel que \ldots\ cm, $N$ étant situé de l’autre côté de \ldots\ et vérifiant \ldots\ cm.
+  \item Démontrer que les points $A$, $M$ et $N$ sont alignés.
+  \item Calculer la mesure de l’angle $\theta$ au millième de radian près.
+\end{enumerate}
+% Correction Exercice 5
+\end{exercice}
+
+
+
 \end{document}
 
 % Local Variables:
