--- a/Premiere/S05-Suites/Cours-Formules-Suites.tex
+++ b/Premiere/S05-Suites/Cours-Formules-Suites.tex
@@ -95,7 +95,7 @@ k = n_{2}-n_{1}\]
 Soit $(u_n)$ une suite arithmétique :
 \[ S_n = u_0 + u_1 + u_2 + \ldots + u_n = \sum_{k=0}^{n} u_k = \dfrac{(n+1)(u_0+u_n)}{2} \]
 Plus généralement, pour tout entier naturel $p<n$ :
-\[S_n = u_p + u_1 + u_2 + \ldots + u_n = \sum_{k=p}^{n} u_k = \dfrac{(n-p+1)(u_p+u_n)}{2} \]
+\[S_n = u_p + u_{p+1} + \ldots + u_n = \sum_{k=p}^{n} u_k = \dfrac{(n-p+1)(u_p+u_n)}{2} \]
 \end{theoreme}
 
 \begin{theoreme}[Suites géométrique.]
@@ -103,7 +103,7 @@ Soit $(u_n)$ une suite géométrique :
 \[ S_n = u_0 + u_1 + u_2 + \ldots + u_n = \sum_{k=0}^{n} u_k = u_0
 \times \dfrac{1-q^{n+1}}{1-q} \]
 Plus généralement, pour tout entier naturel $p<n$ :
-\[ S_n = u_p + u_1 + u_2 + \ldots + u_n = \sum_{k=p}^{n} u_k = u_p
+\[ S_n = u_p + u_{p+1} + \ldots + u_n = \sum_{k=p}^{n} u_k = u_p
 \times \dfrac{1-q^{n-p+1}}{1-q} \]
 \end{theoreme}
 \end{multicols}
