--- a/Premiere/S07-Second-Degre-II/Ex-4a-S07-problemes.tex
+++ b/Premiere/S07-Second-Degre-II/Ex-4a-S07-problemes.tex
@@ -20,7 +20,7 @@ Déterminer le nouveau prix que devra fixer le sponsor pour réaliser un bénéf
 \end{exercice}
 
 \begin{exercice}
-Grégoire, 10 ans, veut délimiter dans son jardin un enclos rectangulaire pour son lapin nain. Son père lui donne 18 m de grillage.
+Pierre, 17 ans, veut délimiter dans son jardin un enclos rectangulaire pour son lapin nain. Son père lui donne 18 m de grillage.
 
 1. Déterminer les dimensions de cet enclos rectangulaire qui donnent une aire maximale.
 
@@ -36,19 +36,6 @@ Calculer la valeur de $t$.
 \end{exercice}
 
 
-\begin{exercice}
-\section*{Équation bicarrée}
-On cherche à résoudre l'équation (E) suivante.
-\[ x^4 - 11x^2 + 18 = 0 \]
-
-1. On pose \( X = x^2 \).
-Montrer que \( x \) est solution de (E) si et seulement si \( X \) est solution de l'équation (E') du second degré :
-\[ X^2 - 11X + 18 = 0 \]
-
-2. Résoudre (E').
-
-3. En déduire les solutions de (E).
-\end{exercice}
 
 \end{document}
 
