--- a/Premiere/S07-Second-Degre-II/DS-1-S07-Second-degre.tex
+++ b/Premiere/S07-Second-Degre-II/DS-1-S07-Second-degre.tex
@@ -1,3 +1,4 @@
+
 %% Font size %%
 \documentclass[11pt]{article}
 
@@ -5,7 +6,7 @@
 \usepackage{Mathdoc}
 
 %% Numéro de séquence %% Titre de la séquence %%
-\renewcommand{\centerhead}{}
+\renewcommand{\centerhead}{Second degré II - Résolution d'équations}
 
 %% Spacing commands %%
 \renewcommand{\baselinestretch}{1} \setlength{\parindent}{0pt}
@@ -17,7 +18,7 @@
 
 \begin{center}
 \duree{1 heure} 
-\total{?? points}
+\total{15 points}
 \coefficient{1}
 \calculatrice{1}
 \recherche 
@@ -25,26 +26,30 @@
 \end{center}
 
 \begin{exercicedevoir}[5][Résoudre les équations du second degré suivantes]
+\begin{multicols}{2}
 \begin{enumerate}
 \item $3x^2+5x-7=0$
-\item $-1-x^2+10x=0$
+\item $-25-x^2+10x=0$
 \end{enumerate}
+\end{multicols}
 \end{exercicedevoir}
 
 \begin{exercicedevoir}[5][Résoudre les inéquations du second degré suivantes]
+\begin{multicols}{2}
 \begin{enumerate}
-\item $x^2 \leq 3x-14$
-\item $9x \geq -3x^2-3$
+\item $x^2 \leq -3x-14$
+\item $9x < 3x^2-3$
 \end{enumerate}
+\end{multicols}
 \end{exercicedevoir}
 
 \begin{exercicedevoir}[5][Comparaison de prix entre deux formules]
 
-Un magasin propose deux options de paiement pour un service :
+Une entreprise propose deux options de paiement pour un service :
 
 \begin{itemize}
-    \item \textbf{Formule A} : $P_A(x) = 5x + 20$ (prix linéaire)
-    \item \textbf{Formule B} : $P_B(x) = x^2 + 10$ (prix quadratique)
+    \item \textbf{Formule A} : $P_A(x) = 5x + 20$
+    \item \textbf{Formule B} : $P_B(x) = x^2 + 10$
 \end{itemize}
 
 avec $x$ représentant le nombre d'unités achetées et $P(x)$ le prix total en euros.
