--- a/Cinquieme/S09-Operations-Fractions/Ex-3a-S09-additions-soustractions.tex
+++ b/Cinquieme/S09-Operations-Fractions/Ex-3a-S09-additions-soustractions.tex
@@ -5,15 +5,15 @@
 \usepackage{Mathdoc}
 
 %% Numéro de séquence %% Titre de la séquence %%
-\renewcommand{\centerhead}{}
+\renewcommand{\centerhead}{Opérations sur les fractions}
 
 %% Spacing commands %%
 \renewcommand{\baselinestretch}{1} \setlength{\parindent}{0pt}
 
 \begin{document}
 
-\begin{exercice}[1][Additions de fractions avec même dénominateur]
-\begin{multicols}{2}
+\begin{exercice}[0]
+\begin{multicols}{3}
 \begin{enumerate}
 \item $\dfrac{3}{5} + \dfrac{2}{5}$
 \item $\dfrac{4}{7} + \dfrac{1}{7}$
@@ -25,8 +25,8 @@
 \end{multicols}
 \end{exercice}
 
-\begin{exercice}[2][Additions de fractions avec dénominateurs différents]
-\begin{multicols}{2}
+\begin{exercice}[0]
+\begin{multicols}{3}
 \begin{enumerate}
 \item $\dfrac{1}{2} + \dfrac{1}{3}$
 \item $\dfrac{3}{4} + \dfrac{1}{6}$
@@ -38,8 +38,8 @@
 \end{multicols}
 \end{exercice}
 
-\begin{exercice}[2][Soustractions de fractions avec dénominateurs différents]
-\begin{multicols}{2}
+\begin{exercice}[0]
+\begin{multicols}{3}
 \begin{enumerate}
 \item $\dfrac{3}{4} - \dfrac{1}{2}$
 \item $\dfrac{5}{6} - \dfrac{1}{3}$
@@ -50,5 +50,48 @@
 \end{enumerate}
 \end{multicols}
 \end{exercice}
+
+
+\begin{exercice}[0]
+\begin{multicols}{3}
+\begin{enumerate}
+\item $\dfrac{5}{16}+\dfrac{6}{8}$
+\item $\dfrac{19}{6}+\dfrac{1}{3}$
+\item $\dfrac{6}{4}+\dfrac{1}{12}$
+\item $\dfrac{19}{15}+\dfrac{1}{3}$
+\item $\dfrac{3}{6}+\dfrac{11}{24}$
+\item $\dfrac{2}{3}+\dfrac{2}{12}$
+\end{enumerate}
+\end{multicols}
+\end{exercice}
+
+
+\begin{exercice}[0]
+\begin{multicols}{3}
+\begin{enumerate}
+\item $\dfrac{6}{3}-\dfrac{7}{15}$
+\item $\dfrac{2}{6}-\dfrac{24}{36}$
+\item $\dfrac{4}{7}-\dfrac{11}{14}$
+\item $\dfrac{6}{3}-\dfrac{1}{12}$
+\item $\dfrac{5}{3}-\dfrac{5}{9}$
+\item $\dfrac{2}{5}-\dfrac{1}{15}$
+\end{enumerate}
+\end{multicols}
+\end{exercice}
+
+
+\begin{exercice}[0]
+\begin{multicols}{3}
+\begin{enumerate}[itemsep=2em]
+\item $\dfrac{2}{6}-\dfrac{7}{24}+\dfrac{9}{6}$
+\item $\dfrac{9}{5}- \Big(\dfrac{1}{25} + \dfrac{2}{5}\Big)$
+\item $\dfrac{6}{5} + 4$
+\item $\dfrac{2}{6}+ 2 \times \dfrac{2}{3}$
+\item $\dfrac{7}{5}-\dfrac{3}{10}+\dfrac{5}{5}$
+\item $\dfrac{1}{32}+ 2 \times \dfrac{5}{8}$
+\end{enumerate}
+\end{multicols}
+\end{exercice}
+
 
 \end{document}
