--- a/Cinquieme/S10-Calcul-litteral/Cours-S10-Calcul-Litteral.tex
+++ b/Cinquieme/S10-Calcul-litteral/Cours-S10-Calcul-Litteral.tex
@@ -14,59 +14,77 @@
 \begin{document}
 
 \section{Définition et vocabulaire}
-\subsection{Définition}
-On appelle \emph{expression littérale} une suite d'opérations dans laquelle figurent des lettres, représentant des nombres inconnus.
 
-\paragraph{Exemple :}
-Le périmètre d'un rectangle de longueur $L$ et de largeur $l$ est donnée par :
+\begin{definition}
+On appelle \emph{expression littérale} une suite d'opérations dans laquelle
+figurent des lettres, représentant des nombres inconnus.
+\end{definition}
+
+\begin{exemple}
+Le périmètre d'un rectangle de longueur $L$ et de largeur $l$ est
+donnée par :
 \[ L \times 2 + l \times 2 \quad \text{ou} \quad (L + l) \times 2 \]
+\end{exemple}
 
-\paragraph{Remarque :}
-Pour alléger les écritures, les mathématiciens ont décidé de ne plus écrire les signes opératoires $\times$ des expressions littérales : devant et derrière une parenthèse, devant et derrière une lettre.
+\begin{remarque}
+Pour alléger les écritures, les mathématiciens ont décidé de ne plus
+écrire les signes opératoires $\times$ des expressions littérales : devant
+et derrière une parenthèse, devant et derrière une lettre.
+\end{remarque}
 
-\paragraph{Exemples :}
+\begin{exemple}
 \begin{align*}
 3 \times x - 7 &= 3x - 7 \\
 (2 - 9 \times y) \times t &= (2 - 9y)t \\
-1 \times x &= 1x \quad \text{mais s'écrit plutôt } x \\
+1 \times x &= 1x = x \\
 2 \times x \times y \times 7 &= 2 \times 7 \times x \times y = 14xy \\
 3 \times a \times a - 7 \times b &= 3a - 7b
 \end{align*}
+\end{exemple}
 
 \section{Distributivité}
 \subsection{Simple distributivité}
-\paragraph{Propriété :}
+
+\begin{propriete}
 Soient $a$, $b$, $k$ trois nombres relatifs. On a alors :
 \[ k \times (a + b) = k \times a + k \times b \]
+\end{propriete}
 
-\paragraph{Exemples :}
+\begin{exemple}
 \begin{align*}
 3 \times (x - 9) &= 3 \times x - 3 \times 9 = 3x - 27 \\
 (-2y) \times (4 - 7x) &= (-2y) \times 4 - (-2y) \times 7x \\
 &= -8y - (-14xy) = -8y + 14xy
 \end{align*}
+\end{exemple}
 
-\paragraph{Remarque :}
-Dans les exemples précédents, on a développé des expressions entre parenthèses. Le procédé inverse s'appelle \emph{factoriser}.
+\begin{remarque}
+Dans les exemples précédents, on a développé des expressions entre
+parenthèses. Le procédé inverse s'appelle \emph{factoriser}.
+\end{remarque}
 
-\paragraph{Exemples :}
+\begin{exemple}
 \begin{align*}
 5x + 35 &= 5 \times x + 5 \times 7 = 5 \times (x + 7) \\
 18 - 6x &= 6 \times 3 - 6 \times x = 6 \times (3 - x)
 \end{align*}
+\end{exemple}
 
 \subsection{Double distributivité}
-\paragraph{Propriété :}
-Soient $a$, $b$, $c$, $d$ quatre nombres relatifs. On a alors :
-\[ (a + b)(c + d) = a \times c + a \times d + b \times c + b \times d = ac + ad + bc + bd \]
 
-\paragraph{Exemple :}
+\begin{propriete}
+Soient $a$, $b$, $c$, $d$ quatre nombres relatifs. On a alors :
+\[ (a + b)(c + d) = a \times c + a \times d + b \times c + b \times d = ac + ad + bc +
+bd \]
+\end{propriete}
+
+\begin{exemple}
 \begin{align*}
 (3 + x)(2x - 7) &= (3 + x)(2x + (-7)) \\
 &= 3 \times 2x + 3 \times (-7) + x \times 2x + x \times (-7) \\
 &= 6x - 21 + 2x^2 - 7x \\
 &= 2x^2 - x - 21
 \end{align*}
-
+\end{exemple}
 
 \end{document}
