--- a/Cinquieme/S10-Calcul-litteral/Cours-S10-Calcul-Litteral.tex
+++ b/Cinquieme/S10-Calcul-litteral/Cours-S10-Calcul-Litteral.tex
@@ -88,3 +88,9 @@ bd \]
 \end{exemple}
 
 \end{document}
+
+% Local Variables:
+% gptel-model: deepseek-chat
+% gptel--backend-name: "DeepSeek"
+% gptel--bounds: nil
+% End:
