--- a/Quatrieme/S06-Satistiques/DS-3-S06-Moyenne.tex
+++ b/Quatrieme/S06-Satistiques/DS-3-S06-Moyenne.tex
@@ -5,7 +5,7 @@
 \usepackage{Mathdoc}
 
 %% Numéro de séquence %% Titre de la séquence %%
-\renewcommand{\centerhead}{}
+\renewcommand{\centerhead}{Chapitre 6 : Statistiques - Éval. 3 : Moyennes}
 
 %% Spacing commands %%
 \renewcommand{\baselinestretch}{1} \setlength{\parindent}{0pt}
@@ -16,19 +16,82 @@
 \vspace{-1.5cm}
 
 \begin{center}
-\duree{2 heures} 
-\total{50 points}
-\coefficient{4}
+\duree{30 minutes} 
+\coefficient{0,5}
 \calculatrice{1}
 \brouillon
-\soin
-\recherche 
-\copieseparee{1}
+\copieseparee{0}
 \end{center}
 
-\begin{exercicedevoir}[5][Consigne.]
+\entetedevoirs{15}
 
+%Moyenne 3 valeurs
+\begin{exercicedevoir}[2]
+\begin{multicols}{2}
+$168$\,\, ; \,\, $165$ \,\, ; \,\,$162$\\
+
+Quelle est la moyenne de cette série (arrondie au dixième) ? \\ \\
+\textbf{Réponse : }\fbox{\makebox[4cm][l]{\strut}} \\ \\
+\columnbreak \\
+\textbf{Calculs :} \\ \encart{3cm}
+\end{multicols}
 \end{exercicedevoir}
+
+%Moyenne 4 valeurs
+\begin{exercicedevoir}[2]
+\begin{multicols}{2}
+$165$\,\, ; \,\, $171$ \,\, ; \,\,$159$ \,\, ; \,\,$164$\\
+Quelle est la moyenne de cette série (arrondie au dixième) ?\\ \\
+\textbf{Réponse : }\fbox{\makebox[4cm][l]{\strut}} \\ \\
+\columnbreak \\
+\textbf{Calculs :} \\ \encart{3cm}
+\end{multicols}
+\end{exercicedevoir}
+
+%Moyenne Pointures Tableau
+\begin{exercicedevoir}[3]
+
+Pour passer une commande de chaussures de foot, Cyril a noté les pointures des membres de son club dans un tableau :
+\begin{multicols}{2}
+\medskip
+$\def\arraystretch{1.5}\begin{array}{|c|c|c|c|c|c|c}\hline  \text{Pointure} &34&35&36&38&39\\\hline \text{Effectif} &4&12&9&10&6\\\hline\end{array}$
+
+\medskip
+Calculser la pointure moyenne des membres de ce club (arrondie au l'unité). \\ \\
+\textbf{Réponse : }\fbox{\makebox[4cm][l]{\strut}} \\ \\
+\columnbreak \\
+\textbf{Calculs :} \\ \encart{3cm}
+\end{multicols}
+\end{exercicedevoir}
+
+%Moyenne Notes
+\begin{exercicedevoir}[3]
+\begin{multicols}{2}
+Abdou a obtenu ces notes ce trimestre-ci en mathématiques :\\$14$; $8$ ; $14$ ; $12$ ; $14$ ; $7$ ; $10$ ; $6$ ; $9$ et $14$.\\Calculser la moyenne des notes (arrondie à l'unité). \\ \\
+\textbf{Réponse : }\fbox{\makebox[4cm][l]{\strut}} \\ \\
+\columnbreak \\
+\textbf{Calculs :} \\ \encart{3cm}
+\end{multicols}
+\end{exercicedevoir}
+
+%Moyenne Temperatures Tableau
+\begin{exercicedevoir}[5]
+
+En octobre 2008, à Berlin, on a relevé les températures suivantes : 
+
+\medskip
+$\def\arraystretch{1.5}\begin{array}{|c|c|c|c|c|c|c|c|c|c|c|c|c|c|c|c|c|c}\hline  \text{Jour}&1&2&3&4&5&6&7&8&9&10&11&12&13&14&15&16\\\hline \text{Température en}  ^\circ\text{C}&16&17&19&20&18&18&16&14&16&18&19&21&19&18&17&17\\\hline\end{array}$
+
+\medskip
+$\def\arraystretch{1.5}\begin{array}{|c|c|c|c|c|c|c|c|c|c|c|c|c|c|c|c|c}\hline  \text{Jour}&17&18&19&20&21&22&23&24&25&26&27&28&29&30&31\\\hline \text{Température en}  ^\circ\text{C}&19&20&18&20&21&19&19&19&20&19&21&21&23&21&20\\\hline\end{array}$
+
+\medskip
+Calculser la moyenne des températures (arrondie au dixième).\\ \\
+\textbf{Réponse : }\fbox{\makebox[4cm][l]{\strut}} \\ \\
+
+\textbf{Calculs :} \\ \encart{3cm}
+\end{exercicedevoir}
+
 
 \end{document}
 
