--- a/Quatrieme/S06-Satistiques/DS-3-S06-Moyenne.tex
+++ b/Quatrieme/S06-Satistiques/DS-3-S06-Moyenne.tex
@@ -57,7 +57,7 @@ Pour passer une commande de chaussures de foot, Cyril a noté les pointures des 
 $\def\arraystretch{1.5}\begin{array}{|c|c|c|c|c|c|c}\hline  \text{Pointure} &34&35&36&38&39\\\hline \text{Effectif} &4&12&9&10&6\\\hline\end{array}$
 
 \medskip
-Calculser la pointure moyenne des membres de ce club (arrondie au l'unité). \\ \\
+Calculer la pointure moyenne des membres de ce club (arrondie au l'unité). \\ \\
 \textbf{Réponse : }\fbox{\makebox[4cm][l]{\strut}} \\ \\
 \columnbreak \\
 \textbf{Calculs :} \\ \encart{3cm}
@@ -67,7 +67,7 @@ Calculser la pointure moyenne des membres de ce club (arrondie au l'unité). \\ 
 %Moyenne Notes
 \begin{exercicedevoir}[3]
 \begin{multicols}{2}
-Abdou a obtenu ces notes ce trimestre-ci en mathématiques :\\$14$; $8$ ; $14$ ; $12$ ; $14$ ; $7$ ; $10$ ; $6$ ; $9$ et $14$.\\Calculser la moyenne des notes (arrondie à l'unité). \\ \\
+Abdou a obtenu ces notes ce trimestre-ci en mathématiques :\\$14$; $8$ ; $14$ ; $12$ ; $14$ ; $7$ ; $10$ ; $6$ ; $9$ et $14$.\\Calculer la moyenne des notes (arrondie à l'unité). \\ \\
 \textbf{Réponse : }\fbox{\makebox[4cm][l]{\strut}} \\ \\
 \columnbreak \\
 \textbf{Calculs :} \\ \encart{3cm}
@@ -86,7 +86,7 @@ $\def\arraystretch{1.5}\begin{array}{|c|c|c|c|c|c|c|c|c|c|c|c|c|c|c|c|c|c}\hline
 $\def\arraystretch{1.5}\begin{array}{|c|c|c|c|c|c|c|c|c|c|c|c|c|c|c|c|c}\hline  \text{Jour}&17&18&19&20&21&22&23&24&25&26&27&28&29&30&31\\\hline \text{Température en}  ^\circ\text{C}&19&20&18&20&21&19&19&19&20&19&21&21&23&21&20\\\hline\end{array}$
 
 \medskip
-Calculser la moyenne des températures (arrondie au dixième).\\ \\
+Calculer la moyenne des températures (arrondie au dixième).\\ \\
 \textbf{Réponse : }\fbox{\makebox[4cm][l]{\strut}} \\ \\
 
 \textbf{Calculs :} \\ \encart{3cm}
