--- a/Quatrieme/S07-Puissances/Ex-3-S07-Puissances-de-Puissances.tex
+++ b/Quatrieme/S07-Puissances/Ex-3-S07-Puissances-de-Puissances.tex
@@ -10,12 +10,44 @@
 %% Spacing commands %%
 \renewcommand{\baselinestretch}{1} \setlength{\parindent}{0pt}
 
+\pagestyle{empty}
+
 \begin{document}
 
-\section{Partie 1}
+\begin{exercice}[1][Puissances de puissances]
+\begin{multicols}{2}
+\begin{enumerate}[itemsep=2em]
+\item  $A=(3^{3})^{3}=$
+\item  $B=(8^{3})^{2}=$
+\item  $C=(9^{2})^{4}=$
+\item  $D=(4^{2})^{2}=$
+\item  $E=(5^{4})^{2}=$
+\item  $F=(7^{2})^{3}=$
+\item  $G=(5^{3})^{3}=$
+\item  $H=(8^{4})^{3}=$
+\item  $I=(5^{2})^{4}=$
+\item  $J=(3^{2})^{2}=$
+\end{enumerate}
+\end{multicols}
+\end{exercice}
 
-\begin{exercice}[1][Consignes]
+\vfill
 
+\begin{exercice}[1][Puissances de puissances]
+\begin{multicols}{2}
+\begin{enumerate}[itemsep=2em]
+\item  $A=(3^{3})^{3}=$
+\item  $B=(8^{3})^{2}=$
+\item  $C=(9^{2})^{4}=$
+\item  $D=(4^{2})^{2}=$
+\item  $E=(5^{4})^{2}=$
+\item  $F=(7^{2})^{3}=$
+\item  $G=(5^{3})^{3}=$
+\item  $H=(8^{4})^{3}=$
+\item  $I=(5^{2})^{4}=$
+\item  $J=(3^{2})^{2}=$
+\end{enumerate}
+\end{multicols}
 \end{exercice}
 
 \end{document}
