--- a/Sixieme/S09-Proportionnalite/DS-3-Problemes.tex
+++ b/Sixieme/S09-Proportionnalite/DS-3-Problemes.tex
@@ -5,7 +5,7 @@
 \usepackage{Mathdoc}
 
 %% Numéro de séquence %% Titre de la séquence %%
-\renewcommand{\centerhead}{}
+\renewcommand{\centerhead}{Proportionnalité - DS 3}
 
 %% Spacing commands %%
 \renewcommand{\baselinestretch}{1} \setlength{\parindent}{0pt}
@@ -15,25 +15,17 @@
 \phantom{0}
 \vspace{-.5cm}
 
-\entetedevoirs{15}
+\entetedevoirs{20}
 
 \begin{center}
-\duree{1 heures} 
+\duree{55 minutes} 
 \coefficient{1}
 \calculatrice{1}
 \end{center}
 
 \renewcommand{\arraystretch}{2}
 
-
-\begin{exercicedevoir}[2][Reconnaître une situation]
-Teresa achète dans un magasin de bricolage des outils.\\Elle  repart
-avec 5 outils pour $12$\,\,€.\\ Arthur achète quant à lui, au même
-endroit 15 outils pour $36$\,\,€.\\Le prix des outils est-il
-proportionnel à la quantité achetée  ? Justifier. \\ \dtf \\ \dtf
-\end{exercicedevoir}
-
-\begin{exercicedevoir}[4][Compléter un tableau]
+\begin{exercicedevoir}[6][Compléter un tableau]
 Avec la méthode de votre choix, déterminer la valeur manquante dans les tableaux de
 proportionnalité suivants. Justifier.
 \begin{multicols}{2}
@@ -45,7 +37,7 @@ $\renewcommand{\arraystretch}{1.5}
 \hline
 \text{Quantité B} & 55 & 45 & 25 \\ 
 \hline
-\end{array}$
+\end{array}$ \\ \\ \\ \\ \\ \\
 
 \item 
 $\renewcommand{\arraystretch}{1.5}
@@ -54,7 +46,7 @@ $\renewcommand{\arraystretch}{1.5}
 \hline
 \text{Quantité B} & 8 & 6 & 6 \\ 
 \hline
-\end{array}$
+\end{array}$ \\ \\ \\ \\ \\ \\
 
 \item 
 $\renewcommand{\arraystretch}{1.5}
@@ -64,7 +56,7 @@ $\renewcommand{\arraystretch}{1.5}
 \hline
 \text{Quantité B} & 3 & 2 & \phantom{000}5\phantom{000} \\ 
 \hline
-\end{array}$
+\end{array}$ \\ \\ \\ \\ \\ \\
 
 \item 
 $\renewcommand{\arraystretch}{1.5}
@@ -74,7 +66,7 @@ $\renewcommand{\arraystretch}{1.5}
 \hline
 \text{Quantité B} & 9 & \ldots & 3 \\ 
 \hline
-\end{array}$
+\end{array}$ \\ \\ \\ \\ \\ \\
 
 \end{enumerate}
 \end{multicols}
@@ -83,7 +75,7 @@ $\renewcommand{\arraystretch}{1.5}
 
 \end{exercicedevoir}
 
-\begin{exercicedevoir}[5][Problème à résoudre]
+\begin{exercicedevoir}[6][Problème à résoudre]
 Ahmed a repéré, à la boutique, des bonbons qui l'intéressent. Il sait que 6 paquets coûtent 800FCFA.
 \begin{multicols}{2}
 \begin{enumerate}
@@ -106,7 +98,7 @@ Combien peut-elle en acheter\,?\\\dtf \\\dtf
 \end{center}
 \end{exercicedevoir}
 
-\begin{exercicedevoir}[4][Problème à prise d'initiative]
+\begin{exercicedevoir}[8][Problème à prise d'initiative]
 Voici la recette du far breton pour 6 personnes :
 \begin{itemize}
     \item Dans un grand saladier, mélanger 4 œufs avec 120g de sucre jusqu'à blanchiment ;
@@ -119,7 +111,7 @@ Marie souhaite adapter cette recette pour 12 personnes, calculer les
 quantités nécessaires.
 \end{exercicedevoir}
 
-\encart{10cm}
+\encart{14cm}
 
 \end{document}
 
