--- a/Utils/DNL/00.Key-Vocab.tex
+++ b/Utils/DNL/00.Key-Vocab.tex
@@ -5,7 +5,7 @@
 \usepackage{Mathdoc}
 
 %% Numéro de séquence %% Titre de la séquence %%
-\renewcommand{\centerhead}{Proportionnality - Key Vocabulary}
+\renewcommand{\centerhead}{Proportionnality - Vocabulary Memo}
 
 %% Spacing commands %%
 \renewcommand{\baselinestretch}{1} \setlength{\parindent}{0pt}
@@ -36,5 +36,32 @@
 \textbf{Table of proportionality :} Tableau de proportionnalité. \\
 \textbf{Cross product method :} Méthode du produit en croix.
 
+\begin{multicols}{2}
+\section{Maths Memo}
 
+\begin{itemize}
+\item \textbf{Proportional / Not proportional}\\ \textit{Proportionnel / Non proportionnel}
+\item \textbf{Table of values} -- \textit{Tableau de valeurs}
+\item \textbf{Multiply} -- \textit{Multiplier}
+\item \textbf{Divide} -- \textit{Diviser}
+\item \textbf{Price} -- \textit{Prix}
+\item \textbf{Quantity} -- \textit{Quantité}
+\item \textbf{Per} -- \textit{Par}
+\item \textbf{For each} -- \textit{Pour chaque}
+\end{itemize}
+
+\section{Classroom English Memo}
+
+\begin{itemize}
+\item \textbf{Complete the table.} -- \textit{Complète le tableau.}
+\item \textbf{Is it proportional?} -- \textit{Est-ce proportionnel ?}
+\item \textbf{What is the constant?} -- \textit{Quel est le coefficient ?}
+\item \textbf{Explain your method.} -- \textit{Explique ta méthode.}
+\item \textbf{Missing values} -- \textit{Valeurs manquantes}
+\item \textbf{Work in pairs.} -- \textit{Travaillez par deux.}
+\item \textbf{Full sentence.} -- \textit{Phrase complète.}
+\item \textbf{How much does it cost ?} -- \textit{Combien cela coûte?}w
+\item \textbf{Check your answer.} -- \textit{Vérifie ta réponse.}
+\end{itemize}
+\end{multicols}
 \end{document}
