--- a/Utils/DNL/Exercise-01-Proportional-Situation.tex
+++ b/Utils/DNL/Exercise-01-Proportional-Situation.tex
@@ -1,21 +1,107 @@
-%% Font size %%
 \documentclass[11pt]{article}
-
-%% Load the custom package
 \usepackage{Mathdoc}
-
-%% Numéro de séquence %% Titre de la séquence %%
-\renewcommand{\centerhead}{}
-
-%% Spacing commands %%
-\renewcommand{\baselinestretch}{1} \setlength{\parindent}{0pt}
-
-%%\pagestyle{empty}
+\renewcommand{\centerhead}{Proportionality - Exercises}
 
 \begin{document}
 
-\begin{exercice}[1][Consignes]
+\begin{exercice}
+Read the two following situations.\\
+For each situation, decide if it represents a \textbf{proportional relationship}. \\
+Explain why or why not, and identify the \textbf{constant of proportionality} if it exists. \\
 
+\textbf{Situation A:} A bicycle rental company charges a fixed \$5 per hour. If Maria rents a bike for 2 hours, she pays \$10. If she rents it for 6 hours, she pays \$30. 
+
+\vspace{1.5em}
+
+\textbf{Situation B:} A taxi company charges a base fare of \$3 plus \$2 per kilometer. If John travels 1 km, he pays \$5. If he travels 3 km, he pays \$9. 
+
+\vspace{1.5em}
+\end{exercice}
+
+\begin{exercice}
+For each table below, calculate the ratio for each columns. \\
+\textbf{Check if the ratios are equal.} \\
+Then determine which table represents a \textbf{proportional relationship}. \\
+Explain your answer. \\
+\begin{multicols}{2}
+  \textbf{Table 1:} \\
+
+  \begin{tabular}{|c|c|c|c|}
+    \hline
+    \textbf{Quantity A} & 2 & 4 & 6 \\
+    \hline
+    \textbf{Quantity B} & 4 & 8 & 12 \\
+    \hline
+  \end{tabular}
+
+  \vspace{0.7em}
+
+  \textbf{Table 2:} \\
+
+  \begin{tabular}{|c|c|c|c|}
+    \hline
+    \textbf{Quantity A} & 1 & 2 & 3 \\
+    \hline
+    \textbf{Quantity B} & 3 & 6 & 10 \\
+    \hline
+  \end{tabular}
+\end{multicols}
+
+  \vspace{0.7em}
+
+
+\end{exercice}
+
+\begin{exercice}
+Use the \textbf{cross product method} to complete the following tables. Show your calculations.
+
+\begin{multicols}{2}
+
+(a)
+\begin{tabular}{|c|c|c|}
+\hline
+\textbf{Quantity A} & 2 & 4 \\
+\hline
+\textbf{Quantity B} & 3 & ? \\
+\hline
+\end{tabular}
+
+\vspace{1.7em}
+
+(b)
+\begin{tabular}{|c|c|c|}
+\hline
+\textbf{Quantity A} & 4 & ? \\
+\hline
+\textbf{Quantity B} & 12 & 6 \\
+\hline
+\end{tabular}
+
+
+(c)
+\begin{tabular}{|c|c|c|}
+\hline
+\textbf{Quantity A} & 5 & 15 \\
+\hline
+\textbf{Quantity B} & 10 & ? \\
+\hline
+\end{tabular}
+
+\vspace{1.7em}
+
+(d)
+\begin{tabular}{|c|c|c|}
+\hline
+\textbf{Quantity A} & ? & 12 \\
+\hline
+\textbf{Quantity B} & 24 & 36 \\
+\hline
+\end{tabular}
+
+\end{multicols}
+
+
+\vspace{1.5em}
 \end{exercice}
 
 \end{document}
