--- a/Utils/DNL/Lesson-Proportionality.tex
+++ b/Utils/DNL/Lesson-Proportionality.tex
@@ -145,5 +145,68 @@ b = \dfrac{252 \times 11}{21} = 132
     \item interpret the result with a well written english sentence.
 \end{enumerate}
 
+\newpage
+\subsection*{Final Example :}
+
+\textbf{Instructions:}  
+Read the problem. Complete the table. Find the constant of proportionality and the missing values. Then write a full sentence to interpret the result.
+
+\medskip
+
+\textbf{Problem:}  
+In a specialized shop 3 notebooks cost 6€.  
+How much do 5 notebooks cost?
+
+\bigskip
+
+\textbf{Table of proportionality (to complete):}
+
+\begin{center}
+\begin{tabular}{|c|c|c|}
+\hline
+Quantity (notebooks) & 3 & 5 \\
+\hline
+Price (€) & 6 &? \\
+\hline
+\end{tabular}
+\end{center}
+
+\bigskip
+
+\textbf{Resolution:}
+
+\begin{itemize}
+    \item We identify the two quantities: quantity of notebooks and price.
+    \item We check proportionality: the situation is proportional.
+    \item We find the coefficient of proportionality:
+    \[
+    6 \div 3 = 2
+    \]
+    So the coefficient is 2 euros per notebook.
+    \item We calculate the missing value:
+    \[
+    5 \times 2 = 10
+    \]
+\end{itemize}
+
+\bigskip
+
+\textbf{Completed table:}
+
+\begin{center}
+\begin{tabular}{|c|c|c|}
+\hline
+Quantity (notebooks) & 3 & 5 \\
+\hline
+Price (€) & 6 & 10 \\
+\hline
+\end{tabular}
+\end{center}
+
+\bigskip
+
+\textbf{Conclusion (full English sentence):}  
+
+Five notebooks cost 10 euros. 
 
 \end{document}
