--- a/Utils/DNL/Evaluation-01-Proportionnality.tex
+++ b/Utils/DNL/Evaluation-01-Proportionnality.tex
@@ -18,9 +18,10 @@
 \textbf{First Name} : \dotfill \\
 \textbf{Last Name} : \dotfill \\
 \textbf{Class} : \dotfill \\
+
 \begin{center}
-\duree{2 heures} 
-\total{50 points}
+\duree{30 min} 
+\total{20 points}
 \coefficient{4}
 \calculatrice{1}
 \brouillon
