--- a/Utils/DNL/Evaluation-01-Proportionnality.tex
+++ b/Utils/DNL/Evaluation-01-Proportionnality.tex
@@ -5,7 +5,7 @@
 \usepackage{Mathdoc}
 
 %% Numéro de séquence %% Titre de la séquence %%
-\renewcommand{\centerhead}{Proportionality Topic - Evaluation 1}
+\renewcommand{\centerhead}{Proportionality - Evaluation 1}
 
 %% Spacing commands %%
 \renewcommand{\baselinestretch}{1} \setlength{\parindent}{0pt}
@@ -13,32 +13,108 @@
 \begin{document}
 
 \phantom{0}
-\vspace{-1.5cm}
+\vspace{-0.5cm}
 
-\textbf{First Name} : \dotfill \\
-\textbf{Last Name} : \dotfill \\
-\textbf{Class} : \dotfill \\
+\textbf{First Name}: \dotfill \\
+\textbf{Last Name}: \dotfill \\
+\textbf{Class}: \dotfill
 
 \begin{center}
-\duree{30 min} 
-\total{20 points}
-\coefficient{4}
-\calculatrice{1}
-\brouillon
-\soin
-\recherche 
-\copieseparee{1}
+\textit{Version A} \\
+\textit{Duration: 30 minutes} \\
+\textit{Total: 10 points} \\
+\textit{The use of a calculator is permitted.} \\
+\textit{The use of rough work paper is strongly recommended.} \\
+\textit{Answers must be written on a separate answer sheet.} \\
 \end{center}
 
-\begin{exercicedevoir}[5][Consigne]
+\textbf{Exercise 1:} \hfill \textbf{\ldots ~/ 10 points} \\
 
-\end{exercicedevoir}
+\textbf{Context:}  
+A walker uses his watch to find that he walks 2 km in 30 minutes and 20 km in 5 hours.
+
+\medskip
+
+\textbf{Questions:}
+
+\begin{enumerate}
+    \item Is this situation a \textbf{proportional relationship} between distance and time? \\
+    Justify your answer. \hfill (2 points)
+
+    \vspace{2em}
+
+    \item Draw and then fill in a \textbf{table of proportionality} for this situation. \hfill (2 points)
+
+    \vspace{2em}
+
+    \item Using the table, find the time needed to walk 1 km at the same speed. \\
+    Show your calculations. \hfill (1 point)
+
+    \vspace{2em}
+
+    \item Using the table, find the distance walked in 2 hours at the same speed. \\
+    Show your calculations. \hfill (1 point)
+
+    \vspace{2em}
+
+    \item Find the time needed to walk 20 km at the same speed. \\ 
+    You will have to use the \textbf{cross product method}. \\
+    Show your calculations. \hfill (3 points)
+
+    \vspace{2em}
+\end{enumerate}
+
+\textbf{Reminders:}  \\
+Use the \textbf{table of proportionality}.  \\
+Check the \textbf{constant of proportionality}.  \\
+1 hour \textbf{=} 60 minutes. \\
+Write a \textbf{full sentence} for each answer.
+
+\newpage
+
+\textbf{First Name}: \dotfill \\
+\textbf{Last Name}: \dotfill \\
+\textbf{Class}: \dotfill
+
+\begin{center}
+\textit{Version B} \\
+\textit{Duration: 30 minutes} \\
+\textit{Total: 10 points} \\
+\textit{The use of a calculator is permitted.} \\
+\textit{The use of rough work paper is strongly recommended.} \\
+\textit{Answers must be written on a separate answer sheet.} \\
+\end{center}
+
+\textbf{Exercise 1:} \hfill \textbf{\ldots ~/ 10 points} \\
+
+\textbf{Context:}  
+A walker uses his watch to find that he walks 2 km in 30 minutes and 20 km in 5 hours.
+
+\medskip
+
+\textbf{Questions:}
+
+\begin{enumerate}
+    \item Is this situation a \textbf{proportional relationship} between distance and time? \\
+    Justify your answer. \hfill (3 points)
+
+    \vspace{2em}
+
+    \item Find the time needed to walk 1 km at the same speed. \\
+    Show your calculations. \hfill (2 points)
+
+    \vspace{2em}
+
+    \item Find the distance walked in 2 hours at the same speed. \\
+    Show your calculations. \hfill (2 points)
+
+    \vspace{2em}
+
+    \item Find the time needed to walk 20 km at the same speed. \\ 
+    You will have to use the \textbf{cross product method}. \\
+    Show your calculations. \hfill (3 points)
+
+    \vspace{2em}
+\end{enumerate}
 
 \end{document}
-
-%%% Local Variables:
-%%% mode: LaTeX
-%%% TeX-master: t
-%%% TeX-master: t
-%%% End:
-
