--- a/Utils/DNL/Exercises-Proportionality.tex
+++ b/Utils/DNL/Exercises-Proportionality.tex
@@ -2,6 +2,9 @@
 \usepackage{Mathdoc}
 \renewcommand{\centerhead}{Proportionality - Exercises}
 
+\renewcommand{\baselinestretch}{1.5} \setlength{\parindent}{0pt}
+
+
 \begin{document}
 
 \begin{exercice}
@@ -103,5 +106,76 @@ Use the \textbf{cross product method} to complete the following tables. Show you
 
 \vspace{1.5em}
 \end{exercice}
+
+\begin{exercice}[0][Listening comprehension -- Shopping]
+
+\textbf{Instructions:}  
+Listen carefully to the dialogue. Then answer the questions.
+
+\medskip
+
+\textbf{Transcript (to be read by the teacher):}
+
+\textit{
+Shopkeeper: Good morning. Can I help you? \\
+Customer: Yes, please. How much are the apples? \\
+Shopkeeper: They are 2 euros per kilogram. \\
+Customer: Okay. And how much are the oranges? \\
+Shopkeeper: The oranges are 3 euros for 2 kilograms. \\
+Customer: I would like 3 kilograms of apples and 4 kilograms of oranges, please. \\
+Shopkeeper: No problem. So, 3 kilograms of apples cost 6 euros, and 4 kilograms of oranges cost 6 euros. The total is 12 euros. \\
+Customer: Here is a 20-euro note. \\
+Shopkeeper: Thank you. Your change is 8 euros. \\
+Customer: Thank you. Have a nice day. \\
+Shopkeeper: You’re welcome. Goodbye.
+}
+
+\medskip
+
+\textbf{Key Words : }price, per, kilogram, cost, total, change, euros, buy, pay 
+
+\medskip
+
+\textbf{Part 1 -- Listening comprehension (vocabulary)}
+
+\begin{enumerate}
+    \item What fruits does the customer buy?
+    \item What is the \textbf{price} of apples \textbf{per} kilogram?
+
+    \item What is the \textbf{price} of oranges for 2 kilograms?
+    \item What does the word \textbf{change} mean in French?
+\end{enumerate}
+
+\medskip
+
+\textbf{Part 2 -- Maths (proportionality)}
+
+\begin{enumerate}
+    \setcounter{enumi}{4}
+    \item Complete the \textbf{table of proportionality} for apples.
+
+    \begin{center}
+    \begin{tabular}{|c|c|c|}
+    \hline
+    \textbf{Quantity (kg)} & 1 & 3 \\
+    \hline
+    \textbf{Price (€)} & ? & ? \\
+    \hline
+    \end{tabular}
+    \end{center}
+
+    \item How much does the customer pay in total?  
+    Write a \textbf{full sentence} in English.
+
+    \item The customer gives a 20-euro note.  
+    How much \textbf{change} does he get?  
+    Write a \textbf{full sentence} in English.
+
+    \item If the customer had 20 euros, how many kilograms of apples could he buy?  
+    Show your calculations.
+\end{enumerate}
+
+\end{exercice}
+
 
 \end{document}
